FFmpeg Output- no color mode by default #64930

Closed
opened 2019-05-21 09:41:43 +02:00 by Wayne Dixon · 5 comments

System Information
Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109

Blender Version
Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-20 22:03, hash: e787700393
Worked: (optional)

Short description of error
When you first choose FFmpeg as a video output there is no 'color' mode by default. This causes many weird artefacts when playblasting.
(this was confirmed on multiple different machines)

Exact steps for others to reproduce the error
start new file
switch ouput to FFmpeg
there is no color mode selected by default

https://www.dropbox.com/s/ah3mrsou6al9gf0/blender_bug_wd_190521.mp4?dl=0

**System Information** Operating system: Darwin-17.2.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 1050 Ti OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.27.6 378.10.10.10.20.109 **Blender Version** Broken: version: 2.80 (sub 71), branch: master, commit date: 2019-05-20 22:03, hash: `e787700393` Worked: (optional) **Short description of error** When you first choose FFmpeg as a video output there is no 'color' mode by default. This causes many weird artefacts when playblasting. (this was confirmed on multiple different machines) **Exact steps for others to reproduce the error** start new file switch ouput to FFmpeg there is no color mode selected by default https://www.dropbox.com/s/ah3mrsou6al9gf0/blender_bug_wd_190521.mp4?dl=0
Author

Added subscriber: @WayneDixon

Added subscriber: @WayneDixon

#65692 was marked as duplicate of this issue

#65692 was marked as duplicate of this issue

Added subscriber: @povmaniac

Added subscriber: @povmaniac
Sebastian Parborg self-assigned this 2019-06-12 15:16:18 +02:00

This issue was referenced by 7a50d078fe

This issue was referenced by 7a50d078fe4125788dfb084cd23a5164070fe69b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64930
No description provided.