Fix T64930: FFmpeg Output- no color mode by default

The issue was that the valid color modes was checked on the old image
format, not the new one. So if you switched formats it would not
correctly check if the settings were valid.